--- a/modules/home-manager/firefox/firefox-new-tab.html
+++ b/modules/home-manager/firefox/firefox-new-tab.html
@@ -128,8 +128,9 @@
 				<a href="https://reddit.com">Reddit</a><br />
 				<a href="https://youtube.com">YouTube</a></br />
 				<a href="https://web.whatsapp.com">WhatsApp</a><br />
-				<a href="https://mail.proton.me">Proton Mail</a>
-            </div>
+				<a href="https://mail.proton.me">Proton Mail</a><br />
+				<a href="https://notion.so">Notion</a>
+			</div>
 			<div>
 				<h2>~/school</h2>
 				<a href="https://elearning.tgm.ac.at">Elearning</a><br />
